--- a/docker‑compose.yml
+++ b/docker‑compose.yml
@@ -191,6 +191,17 @@ services:
     networks:
       - cqt-net
 
+      services:
+  grafana:
+    image: grafana/grafana:10.2.0
+    ports:
+      - "3000:3000"
+    volumes:
+      - ./grafana:/etc/grafana
+    environment:
+      - GF_SECURITY_ADMIN_PASSWORD=${GF_ADMIN_PASS}
+    restart: unless-stopped
+
 # ----------------------------------------------------------------------
 #  8️⃣  NGINX REVERSE‑PROXY (TLS termination for public endpoints)
 # ----------------------------------------------------------------------
